--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Rose Mutai Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="content">
+<body class="body-content">
   <header class="header">
       <div class="logo-section">
         <a href="/" class="logo">Rose</a>
