--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </p>
         </div>
         <div class="socials-section">
-          <button class="connect-link padding">LET'S CONNECT</button>
+          <h4 class="connect-link padding">LET'S CONNECT</h4>
           <ul class="icons">
             <li><img src="./images/twitter.svg" class="icon" alt="twitter icon"></li>
             <li><img src="./images/Linkedin.svg" class="icon" alt="twitter icon"></li>
@@ -199,7 +199,7 @@
 
       <section class="languages">
         <ul>
-          <li class="languages-title">Languages
+          <li class="languages-title lang">Languages
             <ul class="card-language">
               <li class="js-img">
                 <img src="./images/Frame9.svg" alt="Javascript">
@@ -234,22 +234,6 @@
     </section>
    
   </main>
-
-  <!-- <footer class="footer">
-    <h2 class="contact-me-title">Contact me</h2>
-    <p class="contact-description">If you have an application you are interested in developing, 
-      a feature that you need built or a project that needs
-      coding. I’d love to help with it</p>
-    <form class="contact-form">
-      <input type="text" name="name" id="yourname" placeholder="Yeremias">
-      <input type="email" name="email" id="youremail">
-      <textarea name="message" id="yourmessage" cols="30" 
-        rows="10" placeholder="Write your essage here">
-      </textarea>
-      <button type="submit">Get in touch</button>
-    </form>
-
-  </footer> -->
   
 </body>
 </html>
