Fix linter errors

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
       </div>
       <div class="socials-section">
-        <button class="connect-link padding">LET'S CONNECT</button>
+        <h4 class="connect-link padding">LET'S CONNECT</h4>
         <ul class="icons">
           <li> 
             <a href="https://twitter.com/__rosemutai"><img src="./images/twitter.svg" class="icon" alt="twitter icon"></a>
