--- a/index.html
+++ b/index.html
@@ -232,7 +232,18 @@
 
       </section>
     </section>
-    <section class="contact-form"></section>
+    <section class="contact-form-section">
+      <h2 class="contact-me-title">Contact me</h2>
+      <p class="contact-description">If you have an application you are interested in developing,
+        a feature that you need built or a project that needs
+        coding. I’d love to help with it</p>
+      <form class="contact-form">
+        <input type="text" name="name" id="yourname" placeholder="Yeremias">
+        <input type="email" name="email" id="youremail" placeholder="natajayanj14@gmail.com">
+        <textarea name="message" id="yourmessage" cols="" rows="5" placeholder="Write your message here" required maxlength="500"></textarea>
+        <button type="submit">Get in touch</button>
+      </form>
+    </section>
    
   </main>
   
