Add form validation

--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
       <p class="contact-description">If you have an application you are interested in developing,
         a feature that you need built or a project that needs
         coding. I’d love to help with it</p>
-      <form class="contact-form">
+      <form action="https://formspree.io/f/xbjeokzq" method="post" class="contact-form">
         <ul>
           <li>
-            <input type="text" name="name" id="yourname" placeholder="Yeremias">
+            <input type="text" name="name" id="yourname" placeholder="Yeremias" required maxlength="30">
           </li>
           <li>
-            <input type="email" name="email" id="youremail" placeholder="natajayanj14@gmail.com">
+            <input type="email" name="email" id="youremail" placeholder="natajayanj14@gmail.com" required>
           </li>
           <li>
             <textarea name="message" id="yourmessage" cols="" rows="5" placeholder="Write your message here" required maxlength="500"></textarea>
