--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </li>
         </ul>
     
-        <button type="submit">Get in touch</button>
+        <button class="submit-btn" type="submit">Get in touch</button>
       </form>
     </section>
    
