add css transitions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="/" class="logo">Rose</a>
       </div>
       <nav class="nav">
-        <div class="bars hamburger">
+        <div class="bars hamburgerr">
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
