Add working links to specific sections

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </div>
         <ul class="nav-links">
           <li><img src="./images/Icon-Cancel.svg" class="close-icon" alt="close icon"></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#aboutme">About</a></li>
+          <li><a href="#contactme">Contact</a></li>
         </ul>
       </nav>
     
@@ -59,7 +59,7 @@
     </section>
 
     <section class="middle-section ">
-      <section class="works">
+      <section class="works" id="portfolio">
         <div class="card project1">
           <div class="project-image first-column">
             <img src="./images/SnapshootPortfolio.svg" alt="avocode project-image" srcset="">
@@ -173,7 +173,7 @@
         </div>
       </section>
       
-      <section class="rose-full-details">
+      <section class="rose-full-details" id="aboutme">
         <div class="about-rose">
           <div class="about-title-section">
             <h1 class="about-title padding">About Myself</h1>
@@ -241,7 +241,7 @@
       <p class="contact-description">If you have an application you are interested in developing,
         a feature that you need built or a project that needs
         coding. I’d love to help with it</p>
-      <form action="https://formspree.io/f/xbjeokzq" method="post" class="contact-form">
+      <form action="https://formspree.io/f/xbjeokzq" method="post" class="contact-form" id="contactme">
         <ul>
           <li>
             <input type="text" name="name" id="yourname" placeholder="Yeremias" required maxlength="30">
