--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <a href="/" class="logo">Rose</a>
       </div>
       <nav class="nav">
-        <div class="bars">
+        <div class="bars" id="hamburger">
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
-        <ul class="nav-links">
+        <ul class="nav-links" id="menu-links">
           <li><img src="./images/Icon-Cancel.svg" class="close-icon" alt="close icon"></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#aboutme">About</a></li>
@@ -225,14 +225,14 @@
                 </li>
               </ul>
             
-            <div class="framework">
+            <div class="frameworks">
               <ul class="framework-list">
                 <li class="languages-title">Frameworks</li>
                 <img class="arrow-img" src="./images/Union.svg" alt="arrow right">
               </ul>
             </div>
             <hr>
-            <div class="skill">
+            <div class="skills">
               <ul class="skill-list">
                 <li class="languages-title">Skills</li>
                 <img class="arrow-img" src="./images/Union.svg" alt="arrow right">
@@ -268,6 +268,6 @@
     </section>
    
   </main>
-  
+  <script src="app.js"></script>
 </body>
 </html>
