--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <a href="/" class="logo">Rose</a>
       </div>
       <nav class="nav">
-        <div class="bars" id="hamburger">
+        <div class="bars" onclick="menu()" id="nav">
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
+        <!-- <img   src="images/Icon-Cancel.svg" alt=""> -->
         <ul class="nav-links" id="menu-links">
-          <li><img src="./images/Icon-Cancel.svg" class="close-icon" alt="close icon"></li>
+          <li><img id="iconCancle" src="./images/Icon-Cancel.svg" onclick="cancleIcon()" class="close-icon" alt="close icon"></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#aboutme">About</a></li>
           <li><a href="#contactme">Contact</a></li>
