Fix linter errors

--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
             
             <div class="frameworks">
               <ul class="framework-list">
-                <li class="languages-title">Frameworks</li>
+                <li class="frame-title">Frameworks</li>
                 <img class="arrow-img" src="./images/Union.svg" alt="arrow right">
               </ul>
             </div>
             <hr>
             <div class="skills">
               <ul class="skill-list">
-                <li class="languages-title">Skills</li>
+                <li class="skilltitle">Skills</li>
                 <img class="arrow-img" src="./images/Union.svg" alt="arrow right">
               </ul>
             </div>
