added qurey sellector

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         <a href="/" class="logo">Rose</a>
       </div>
       <nav class="nav">
-        <div class="bars" onclick="OpenNavBarMenu()" id="hamburger">
+        <div class="bars" id="hamburger">
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
         </div>
-        <!-- <img   src="images/Icon-Cancel.svg" alt=""> -->
         <ul class="nav-links" id="menu-links">
-          <li><img id="iconCancel" src="./images/Icon-Cancel.svg" onclick="closeNavBarMenu()"
+          <li><img id="iconCancel" src="./images/Icon-Cancel.svg"
              class="close-icon" alt="close icon">
           </li>
           <li><a href="#portfolio">Portfolio</a></li>
