Add mobile and desktop project details modal

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body class="body-content" id="body">
   <!-- start of modal -->
   <div class="modal" id="details-modal">
-    <div><h3 id="modal-title" class="project-title"></h3></div>
+    <div><h3 id="modal-title" class="project-title">Tonic</h3></div>
     <ul class="project-links">
-      <li id="comapany" class="canopy">canopoy</li>
+      <li id="comapany" class="canopy">canapoy</li>
       <li class="small-circle">.</li>
-      <li id="role" class="career-role">backend dev</li>
+      <li id="role" class="career-role"></li>
       <li class="small-circle">.</li>
-      <li id="jobyear" class="year">2015</li>
+      <li id="jobyear" class="year"></li>
     </ul>
     <img id="closeModal" src="./images/IconTimes.svg" class="cancel-modal" alt="close icon">
     <img id="modalImage" src="./images/newProject.svg" alt="avocode project-image" srcset="">
