Add dynamic modal

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body-content" id="body">
-  
+
   <!-- start of modal -->
-  <div class="modal-section">
+  <div class="modal-section" id="modalSection">
     <div class="modal" id="details-modal"></div>
   </div>
       
