Add email validation to contact form

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </li>
         </ul>
     
-        <button class="submit-btn" type="submit">Get in touch</button>
+        <button class="submit-btn" id="getintouchBtn" type="submit">Get in touch</button>
       </form>
     </section>
    
